--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 .navbar {
     position: sticky;
     z-index: 100;
@@ -94,6 +92,8 @@ h3 {
 .card-body {
     display: flex;
     flex-direction: column;
+    background: rgba(0, 0, 0, 0) linear-gradient(to top, rgba(0, 0, 0, 0) 0px, rgba(0, 0, 0, 0.8) 100%) repeat 0 0;
+    z-index: 1;
 }
 .card-title {
     text-align: center;
@@ -112,7 +112,7 @@ h3 {
     text-align: center;
     font-family: Roboto;
     font-size: 17px;
-    color: #000;
+    color: #fafafa;
     position: relative;
     top: 15%;
 }
@@ -128,7 +128,11 @@ h3 {
     color: #000;
 }
 .card-creds {
-    writing-mode: vertical-rl;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     color: #fafafa;
     text-align: left;
+    writing-mode: vertical-rl;
+    font-size: 10px;
 }
