--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ h3 {
     color: #fafafa;
 }
 .card-title a:hover {
-    color: #5bbde7;
+    color: #b7fcfc;
 }
 .card-descrip {
     text-align: center;
