--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ h3 {
     font-family: Vidaloka;
 }
 .card {
-    height: 320px;
+    height: 300px;
     max-width: 100%;
     margin: 1rem;
     background-color: #202020;
@@ -84,6 +84,7 @@ h3 {
 .card-img-top {
     height: 100%;
     width: auto;
+    object-fit: cover;
     background: linear-gradient(
                  rgba(0, 0, 0, 0.5),
                  rgba(0, 0, 0, 0.5)
