--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 600px) {
+    .navbar {
+        padding-right: 0%;
+    }
+}
+    
 .navbar {
     position: sticky;
     z-index: 100;
