--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
     .gif video {
         height: auto;
         width: 100%;
-        border: 5px solid #b3d7e6;
+        border: 3px solid #b3d7e6;
+        padding: 0;
     }
 }
     
