--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@
     .navbar {
         padding-right: 0%;
     }
+    body {
+        padding-left: 0;
+        padding-right: 0;
+    }
     .gif video {
         height: auto;
         width: 100%;
         border: 3px solid #b3d7e6;
-        padding: 0;
     }
 }
     
