--- a/style.css
+++ b/style.css
@@ -3,12 +3,14 @@
         padding-right: 0%;
     }
     body {
-        padding-left: 0;
-        padding-right: 0;
+        padding-left: 0%;
+        padding-right: 0%;
     }
     .gif video {
         height: auto;
         width: 100%;
+        padding-left: 0%;
+        padding-right: 0%;
         border: 3px solid #b3d7e6;
     }
 }
