--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@
 .headshot {
     max-width: 100%;
     height: auto;
+    text-align: center;
+    display: block;
+    padding-top: 5%;
 }
 
 body {
