--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     padding-right: 10%;
     background-color: #000;
     color: #b3d7e6;
+    padding-bottom: 10%;
 }
 
 h1 {
@@ -165,9 +166,14 @@ h3 {
     width: 70%;
     font-size: 20px;
 }
-
+.more {
+    font-size: 20px;
+}
 a {
     color: #fafafa;
+}
+a:hover {
+    color: rgb(87, 255, 255);
 }
 
 @media only screen and (max-width: 600px) {
