--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ h3 {
     font-size: 10px;
 }
 
-.gif video {
+.gif video img {
     border: 10px solid #b3d7e6;
     display: block;
     margin: 0 auto;
