--- a/style.css
+++ b/style.css
@@ -75,7 +75,9 @@ h1 {
 .fa-github {
     color: #fafafa;
 }
-
+a {
+    color: #b3d7e6;
+}
 
 h3 {
     font-size: 33px;
@@ -151,7 +153,7 @@ h3 {
     font-size: 10px;
 }
 
-.gif video {
+.gfx video {
     border: 10px solid #b3d7e6;
     display: block;
     margin: 0 auto;
@@ -161,7 +163,7 @@ h3 {
 .gfx img {
     display: block;
     margin: 0 auto;
-    width: 20%;
+    width: 40%;
     height: auto;
 }
 .gfx p, .more {
