--- a/style.css
+++ b/style.css
@@ -116,6 +116,13 @@ h3 {
     background: rgba(0, 0, 0, 0) linear-gradient(to top, rgba(0, 0, 0, 0) 0px, rgba(0, 0, 0, 0.7) 100%) repeat 0 0;
     z-index: 15;
 }
+
+.card-body-gfx {
+    display: flex;
+    flex-direction: column;
+    z-index: 15;
+}
+    
 .card-title {
     text-align: center;
     font-family: Roboto;
