--- a/style.css
+++ b/style.css
@@ -25,12 +25,12 @@
     padding-bottom: 4%;
 }
 .headshot {
-    max-width: 80%;
-    height: auto;
+    max-width: 100%;
+    height: 80%;
     text-align: center;
     display: block;
     padding-top: 3%;
-    padding-left: 5%;
+    padding-left: 8%;
 }
 
 body {
