--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@
     padding-bottom: 4%;
 }
 .headshot {
-    max-width: 100%;
-    height: 80%;
+    max-width: 80%;
+    max-height: 80%;
     text-align: center;
     display: block;
     padding-top: 3%;
